# Staff-Schedueling-Shift-management-System

./: .env.example  .gitignore  README.md  coverage.xml  docker-compose.yml  pytest.ini  test.db  test_health.py
backend/: Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3fd1bbe6137a_initial_schema.py  a1b2c3d4e5f6_add_user_security_columns.py  c1d2e3f4a5b6_person2_schema.py  d4e5f6a1b2c3_fix_token_version_server_default.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: shifts.py  users.py
backend/app/: database.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: attendance.py  auth.py  availability.py  router.py  shifts.py  swaps.py  users.py
backend/app/api/v1/endpoints/: shifts.py  users.py
backend/app/core/: config.py  security.py  validators.py
backend/app/models/: __init__.py  attendance.py  audit_log.py  availability.py  schedule.py  shift.py  staff_assignment.py  swap_request.py  user.py
backend/app/repositories/: __init__.py  assignment_repository.py  attendance_repository.py  audit_log_repository.py  availability_repository.py  shift_repository.py  swap_repository.py  user_repository.py
backend/app/schemas/: __init__.py  assignment.py  attendance.py  auth.py  availability.py  schedule.py  shift.py  swap.py  user.py
backend/app/services/: __init__.py  attendance_service.py  availability_service.py  shift_service.py  swap_service.py  user_service.py
backend/core/: config.py  security.py  validators.py
backend/models/: __init__.py  schedule.py  shift.py  user.py
backend/repositories/: __init__.py  shift_repository.py
backend/schemas/: shift.py  user.py
backend/services/: user_service.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_shifts_e2e.py
backend/tests/e2e/features/: shifts.feature  swaps.feature
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_shifts_api.py  test_swaps_api.py  test_users_api.py
backend/tests/unit/: test_auth_dependencies.py  test_shift_service.py  test_swap_service.py
docs/design/: architecture.md
e2e/: base_page.py  conftest.py
tests/: conftest.py
tests/e2e/: test_health_e2e.py
tests/fixtures/: factories.py
tests/integration/: test_users_api.py
tests/unit/: test_validators.py
